.IllegalArgumentException: Could not resolve placeholder 'OPENSHIFT_MAIL_HOST' in value "${OPENSHIFT_MAIL_HOST}

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -59,6 +59,17 @@ spring:
     init:
       mode: always
 
+  #  mail:
+  #    properties:
+  #      mail:
+  #        smtp:
+  #          starttls:
+  #            enable: true
+  #          auth: true
+  #    host: smtp.gmail.com
+  #    username: jira4jr@gmail.com
+  #    password: zdfzsrqvgimldzyj
+  #    port: 587
 
   thymeleaf.check-template-location: false
 
