--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,18 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/jira
       - SPRING_DATASOURCE_USERNAME=jira
       - SPRING_DATASOURCE_PASSWORD=JiraRush
+      - OPENSHIFT_GOOGLE_CLIENT_ID=329113642700-f8if6pu68j2repq3ef6umd5jgiliup60.apps.googleusercontent.com
+      - OPENSHIFT_GOOGLE_CLIENT_SECRET=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
+      - OPENSHIFT_GITHAB_CLIENT_ID=3d0d8738e65881fff266
+      - OPENSHIFT_GITHAB_CLIENT_SECRET=0f97031ce6178b7dfb67a6af587f37e222a16120
+      - OPENSHIFT_GITlAB_CLIENT_ID=b8520a3266089063c0d8261cce36971defa513f5ffd9f9b7a3d16728fc83a494
+      - OPENSHIFT_GITlAB_CLIENT_SECRET=e72c65320cf9d6495984a37b0f9cc03ec46be0bb6f071feaebbfe75168117004
+      - OPENSHIFT_MAIL_HOST=smtp.gmail.com
+      - OPENSHIFT_MAIL_PORT=587
+      - OPENSHIFT_MAIL_USERNAME=jira4jr@gmail.com
+      - OPENSHIFT_MAIL_PASSWORD=zdfzsrqvgimldzyj
+
+
   nginx:
     container_name: nginx
     image: nginx:latest
