--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <!--            <scope>test</scope>-->
+        </dependency>
     </dependencies>
 
     <build>
