--- a/config/_application-test.yaml
+++ b/config/_application-test.yaml
@@ -3,8 +3,8 @@ app:
   host-url: http://localhost
 spring:
   datasource:
-    url: jdbc:h2:mem:jira-test
-    username: jira
+    url: jdbc:h2:mem:testdb
+    username: sa
     password:
   #  hibernate:
   #    dialect: H2Dialect
