--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.username=${OPENSHIFT_MAIL_USERNAME}
 spring.mail.password=${OPENSHIFT_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.datasource.url=jdbc:postgresql:${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/jira
+spring.datasource.username=${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
