--- a/config/application-test.yaml
+++ b/config/application-test.yaml
@@ -3,10 +3,27 @@ app:
 #  host-url: http://localhost
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:jiraTest #;INIT=RUNSCRIPT FROM 'classpath:db/changelogH2.sql';DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driverClassName: org.h2.Driver
+    script: classpath:db/changelogH2.sql
+  liquibase:
+    enabled: false
+    drop-first: true
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-    defer-datasource-initialization: true
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: false
+    properties:
+      hibernate:
+        id:
+          new_generator_mappings: false
+        dialect: org.hibernate.dialect.H2Dialect
+        hbm2ddl:
+          auto: none
+logging:
+  level:
+    root: INFO
+    com:
+      Baeldung: INFO
