--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -11,6 +11,7 @@ spring:
   liquibase:
     enabled: false
     drop-first: true
+    changeLog: "classpath:db/changelogH2.sql"
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
@@ -22,6 +23,7 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
         hbm2ddl:
           auto: none
+
 logging:
   level:
     root: INFO
