application.properties refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,8 @@ spring.security.oauth2.client.provider.gitlab.user-name-attribute=email
 app.host-url=http://localhost:8080
 app.test-mail=jira4jr@gmail.com
 app.templates-update-cache=5s
+app.mail-sending-props.core-pool-size=8
+app.mail-sending-props.max-pool-size=100
 spring.sql.init.mode=always
 spring.thymeleaf.check-template-location=false
 spring.mvc.throw-exception-if-no-handler-found=true
@@ -54,20 +56,15 @@ spring.config.activate.on-profile=prod
 spring.datasource.url=jdbc:postgresql:${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/jira
 spring.datasource.username=${OPENSHIFT_MYSQL_DB_USERNAME}
 spring.datasource.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
-#  liquibase:
-#    change-log: classpath:/db/changelog/db.changelog-master.xml
 #---
 spring.config.activate.on-profile=test
-#spring.datasource.url=jdbc:h2:mem:jiraTest ;INIT=RUNSCRIPT FROM 'classpath:db/changelogH2.sql';DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:mem:jiraTest 
+spring.test.database.replace=NONE
+spring.datasource.url=jdbc:h2:mem:jiraTest;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-#script=classpath:db/changelogH2.sql
-#  spring.liquibase.change-log=
-spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelogH2-master.yaml
 spring.liquibase.drop-first=true
-spring.liquibase.changeLog="classpath:src/test/resources/db/changelogH2.sql"
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
