--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,15 +58,20 @@ spring.datasource.username=${OPENSHIFT_MYSQL_DB_USERNAME}
 spring.datasource.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
 #---
 spring.config.activate.on-profile=test
-spring.test.database.replace=NONE
-spring.datasource.url=jdbc:h2:mem:jiraTest;
+spring.liquibase.enabled=false
+spring.jpa.defer-datasource-initialization=false
+#spring.test.database.replace=NONE
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:h2:file:/data/testdb
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:init.sql';
+#spring.datasource.url=jdbc:h2:testdb;MODE=MSSQLServer;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM './src/main/resources/init.sql'
+spring.datasource.url=jdbc:h2:./src/main/resources/testdb;INIT=RUNSCRIPT FROM './src/main/resources/init.sql';DATABASE_TO_UPPER=false
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.liquibase.change-log=classpath:db/changelog/db.changelogH2-master.yaml
-spring.liquibase.drop-first=true
+#spring.liquibase.change-log=classpath:db/changelog/db.changelogH2-master.yaml
+#spring.liquibase.drop-first=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=false
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
