--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.test.skip>true</maven.test.skip>
+        <!--        <maven.test.skip>true</maven.test.skip>-->
     </properties>
 
     <dependencies>
@@ -230,6 +230,7 @@
             <id>prod</id>
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
+                <maven.test.skip>true</maven.test.skip>
             </properties>
             <build>
                 <plugins>
