--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,7 +65,7 @@ spring.jpa.defer-datasource-initialization=false
 #spring.datasource.url=jdbc:h2:file:/data/testdb
 #spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:init.sql';
 #spring.datasource.url=jdbc:h2:testdb;MODE=MSSQLServer;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM './src/main/resources/init.sql'
-spring.datasource.url=jdbc:h2:./src/main/resources/testdb;INIT=RUNSCRIPT FROM './src/main/resources/init.sql';DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:./src/main/resources/testdb;INIT=RUNSCRIPT FROM './src/main/resources/init.sql';DATABASE_TO_UPPER=FALSE;MODE=MSSQLServer;CASE_INSENSITIVE_IDENTIFIERS=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
