--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,9 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changelog.sql
+  - include:
+      file: db/changelog/changelog2.sql
+
 
 
 
